# movie-madness-map

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
analysis/: data_issues_section.md  precision_check.py  report_build.py  verify_proven.py
docs/: about.html
pipeline/: 00_fetch_catalog.py  01_prepare_films.py  02_fetch_tmdb.py  03_build_corpus.py  04_embed_films.py  05_reduce_umap.py  06_label_topics.py  07_visualize.py  config.py  filter_panel.html  http_util.py  normalize.py
tests/: test_normalize.py  test_tmdb_matching.py  test_year_collapse.py
